@@ -22,7 +22,9 @@ Changes to Existing Features in 3.12.01
 
 New Features for 3.12.01
 ========================
-
+[1901380] Find result highlighted and selected. Also, if the Esc key is not
+being used to minimize PasswordSafe then it will close the Find Toolbar
+if active.
 
 Bugs fixed in 3.12
 ==================
